--- a/1107.2138/Opus-Magnum-final.tex
+++ b/1107.2138/Opus-Magnum-final.tex
@@ -49,13 +49,17 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-%\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[noBBpl,sc]{mathpazo}
+%\usepackage[T1]{fontenc}
+%\usepackage[altbullet]{lucidabr}
+
+\linespread{1.1}
+\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[T1]{fontenc}
-\usepackage[altbullet]{lucidabr}
-\usepackage[small]{titlesec}
+
+%\usepackage[T1]{fontenc}
+%\usepackage[altbullet]{lucidabr}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 
 % the lucida varphi is hideous
@@ -63,6 +67,7 @@ bookmarksopenlevel=10
 \DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/mnsymbol.tex}
 
 \usepackage[small]{titlesec}
 \usepackage{amsmath}
@@ -380,7 +385,7 @@ from their solutions.
 
 }%EndZeText
 
-
+\newpage
 \subsection{Measurements and interpretation of quantum mechanics}
 \label{section.1.1.1}
 
@@ -701,12 +706,14 @@ We will make the argument more precise in sections~\ref{fin10.2.2} and \ref{fin1
 
 }%EndZeText
 
+\newpage
 \subsection{The need for quantum statistical mechanics}
 \label{section.1.2}
 
  \hfill {{\it Om een paardendief te vangen heb je een paardendief nodig}\footnote{To catch a horse thief, you need a horse thief}}
 
 \noindent\noindent
+
 \hfill {{\it Un coupable en cache un autre}\footnote{ One culprit hides another}}
 
 \hfill {Dutch and French proverbs}
@@ -3390,6 +3397,8 @@ $P_{\rm M}^{\rm dis}\left(  m\right)  $ which characterizes through (\ref{P->R})
 state of ${\rm M}$.
 
 }%EndZeText
+
+\newpage
 \subsubsection{Equilibrium state of the bath}
 
 
@@ -5137,7 +5146,7 @@ spins exceeding some bound $K$ much smaller than $N$. We shall return to this is
 
 }%EndZeText
 
-
+\newpage
 \subsection{Randomness of the initial state of the magnet}
 \label{section.5.2}
 
@@ -5363,6 +5372,8 @@ the numbers of spins pointing up and down.
 
 
 }%EndZeText
+
+\newpage
 \subsection{Consequences of discreteness}
 \label{section.5.3}
 
@@ -7384,8 +7395,6 @@ $2m_{\rm c}=0.54$. Here however, for $N=1000$, $T=0.2J$ and $g=0.045J$, the boun
 since we cannot switch off $g$ before $\mu$ has reached (at the time $1.09 \tau_{\rm reg}$ found from (E.15)) 
 the value $1 - 13 \cdot 10^{-5}$, close to the equilibrium value $m_{\rm F}=1- 9 \cdot 10^{-5}$.   
 
-\vspace{3mm}
-
 
  Altogether, for $q=2$ as well as for $q=4$, we can check that the approximate algebraic treatment of sections~7.2.3 and 7.2.4 
  fits the numerical solution of Eq. (7.1) exemplified by the figures 7.3 to 7.6. In both cases, the registration times
@@ -7447,6 +7456,7 @@ small that it violates the condition (\ref{gmin})?
 
 }%EndZeText
 
+\newpage
 \subsubsection{Dynamics of the invariance breaking}
 \label{section.7.3.1}
 
@@ -9122,7 +9132,7 @@ $-m_{\rm B}$.
 
 }%EndZeText
 
-
+\newpage
 \subsubsection{Leakage}
 \label{section.8.2.3}
 
@@ -9254,7 +9264,7 @@ $b/g\sqrt{N}$.
 
 }%EndZeText
 
-
+\newpage
 \subsubsection{Possibility of an ideal measurement}
 \label{section.8.2.4}
 
@@ -9435,8 +9445,6 @@ so slow that $b$ has time to spoil the measurement during the
 leakage delay.
 
 }%EndZeText
-
-\newpage
 
 \subsubsection{Switching on and off the system-apparatus interaction}
 \label{section.8.2.5}
