--- a/2004.10741/main.tex
+++ b/2004.10741/main.tex
@@ -11,9 +11,43 @@
 \usepackage{tikzit}
 \usepackage{fontawesome}
 \usepackage{stmaryrd}
-\usepackage[margin=1.2in]{geometry}
 \usepackage{authblk}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \title{Categories of Semantic Concepts}
 %\titlerunning{Categories of Semantic Concepts}
 %\addauthor{IFCoLog}{International Federation of Computational Logic}
@@ -98,6 +132,9 @@
 \newtheorem{defn}{Definition}
 \theoremstyle{plain}
 \newtheorem{prop}{Proposition}
+\date{22 Apr 2020}
+\raggedbottom
+\sloppy
 
 \begin{document}
 \maketitle
@@ -108,11 +145,11 @@
 
 \section{Introduction}
 
-G\"{a}rdenfors proposes geometry as a mediator between raw empirical data and symbolic cognitive representations of concepts \cite{gardenfors_conceptual_2004}. Conceptual spaces conceived in this way were instrumental in developing state-of-the-art models for semantic inference from linguistic data \cite{bolt_interacting_2017}, in conjunction with tools from Firth's distributional models of meaning, and the DisCoCat programme of categorial grammar and semantics \cite{coecke_mathematical_2010}.\\
+G\"{a}rdenfors proposes geometry as a mediator between raw empirical data and symbolic cognitive representations of concepts \cite{gardenfors_conceptual_2004}. Conceptual spaces conceived in this way were instrumental in developing state-of-the-art models for semantic inference from linguistic data \cite{bolt_interacting_2017}, in conjunction with tools from Firth's distributional models of meaning, and the DisCoCat programme of categorial grammar and semantics \cite{coecke_mathematical_2010}.
 
-G\"{a}rdenfors' model treats concepts as regions of abstract geometric domains that encode properties; for instance, where the domains are colour and taste, the concept `Banana' might be expressed as a well-behaved restricted region that captures the expected inferences that no bananas are red and sour, while yellow bananas tend to be sweet, and green ones bitter.\\
+G\"{a}rdenfors' model treats concepts as regions of abstract geometric domains that encode properties; for instance, where the domains are colour and taste, the concept `Banana' might be expressed as a well-behaved restricted region that captures the expected inferences that no bananas are red and sour, while yellow bananas tend to be sweet, and green ones bitter.
 
-We develop towards a categorical formalism that builds categories of semantic concepts -- such as `Banana' -- on top of arbitrary categories whose objects are the modeller's choice of conceptual spaces that constitute what G\"{a}rdenfors calls \emph{integral domains}.  We briefly recount G\"{a}rdenfors' ontology. An integral domain is a semantic space where one cannot have incomplete information, just as one cannot hear the pitch of a sound without also perceiving the volume. Colourspace (more accurately, Hue) is such an integral domain of three quality dimensions, redness, greenness, and blueness. Similarly, tastespace is an integral domain, along, say, the dimensions of sweetness, savouriness, bitterness, sourness, and umami. However, when considering fruitsspace, modelled as the (tensored) conjunction of colour and taste, it is possible to specify colour without taste (by just looking), and taste without colour (by eating blindfolded.) In this case we refer to the domains of colour and taste as independent domains\footnote{`integral' and `separable' are also referred to as `interacting' and `separable' in the literature}. We abstractly deem a concept to be a subregion of possibly multiple tensorially conjoined independent domains. For instance, where fruitspace is the tensor of colourspace and tastespace, the concept `banana' falls within an acceptable range of yellowness and greenness, sweetness and bitterness, in a potentially non-trivial way: we may tolerate different taste-ranges in bananas depending on their colour. Percepts that stray too far outside these constraints may not be intuitively classified as bananas \emph{per se}, as sour purple bananas are like black swans: arguably not bananas at all.\\
+We develop towards a categorical formalism that builds categories of semantic concepts -- such as `Banana' -- on top of arbitrary categories whose objects are the modeller's choice of conceptual spaces that constitute what G\"{a}rdenfors calls \emph{integral domains}.  We briefly recount G\"{a}rdenfors' ontology. An integral domain is a semantic space where one cannot have incomplete information, just as one cannot hear the pitch of a sound without also perceiving the volume. Colourspace (more accurately, Hue) is such an integral domain of three quality dimensions, redness, greenness, and blueness. Similarly, tastespace is an integral domain, along, say, the dimensions of sweetness, savouriness, bitterness, sourness, and umami. However, when considering fruitsspace, modelled as the (tensored) conjunction of colour and taste, it is possible to specify colour without taste (by just looking), and taste without colour (by eating blindfolded.) In this case we refer to the domains of colour and taste as independent domains\footnote{`integral' and `separable' are also referred to as `interacting' and `separable' in the literature}. We abstractly deem a concept to be a subregion of possibly multiple tensorially conjoined independent domains. For instance, where fruitspace is the tensor of colourspace and tastespace, the concept `banana' falls within an acceptable range of yellowness and greenness, sweetness and bitterness, in a potentially non-trivial way: we may tolerate different taste-ranges in bananas depending on their colour. Percepts that stray too far outside these constraints may not be intuitively classified as bananas \emph{per se}, as sour purple bananas are like black swans: arguably not bananas at all.
 
 In the remainder of this paper, we first briefly introduce Symmetric Monoidal Categories and their attendant graphical calculus, the tool of choice for the DisCoCat school of modelling categorial semantics. We then develop a cognitively-driven axiomatic account of updating static properties of systems. We then introduce the notion of correlators on update structures, and by demonstration, we exhibit how concepts may be constructed from domains by their restriction and correlating actions. We then recover from these tools the first categorical formulation of G\"{a}rdenfors' semantic concepts, and show how our construction reconciles with our account of updating.
 
@@ -177,7 +214,7 @@ The identity on the monoidal unit $I$ is represented as a blank diagram. In this
 \tikzfigscale{1}{figs/compositeprocess}
 \end{equation}
 
-Since we take our braiding to be symmetric, one need not worry about the order in which wires cross each other. Nevertheless, most of this work can be easily extended to the case of non-symmetric braided monoidal categories.\\
+Since we take our braiding to be symmetric, one need not worry about the order in which wires cross each other. Nevertheless, most of this work can be easily extended to the case of non-symmetric braided monoidal categories.
 
 The commonality of extant approaches to modelling semantics in categorial grammar is that wires are interpreted as `meaning spaces', and states on such wires correspond to specific objects. For instance, in the category \textbf{Set} of sets and functions, viewed as a SMC with cartesian product as monoidal product and singletons as monoidal unit is a monoidal category, the wires are sets, and states on wires are specific elements of those sets. In the SMC \textbf{Vect} of vector spaces and linear maps with $\otimes$ as tensor product, states on wires are vectors, which are used to encode semantics in distributional models of meaning.
 
@@ -223,7 +260,7 @@ Which satisfy the following equations:
     \end{equation}
 \end{itemize}
 \end{defn}
-It should be noted that axiom (\ref{putput}) says that $\putt{}$ is a ``weak'' module over the magma $\mix{}$ while (\ref{getget}) says that $\get{}$ is a ``weak'' comodule over the comagma $\copyy{}$. By weak we mean that they have no (co)units, nor are they actions over a (co)monoid as would be more usual. Modules and comodules in their usual setting have seen application in the categorical quantum mechanics line of research where they describe observables \cite{coecke_measurements}.\\
+It should be noted that axiom (\ref{putput}) says that $\putt{}$ is a ``weak'' module over the magma $\mix{}$ while (\ref{getget}) says that $\get{}$ is a ``weak'' comodule over the comagma $\copyy{}$. By weak we mean that they have no (co)units, nor are they actions over a (co)monoid as would be more usual. Modules and comodules in their usual setting have seen application in the categorical quantum mechanics line of research where they describe observables \cite{coecke_measurements}.
 
 We also define a slight weakening of an update structure, one where the GetPut axiom does not hold, but where it is replaced with the \textit{repeat-update} axiom.
 \begin{defn}[Weak Update Structure]
@@ -242,7 +279,7 @@ Follows by application of axiom \ref{putget} followed by axiom \ref{getput} to t
 \end{proof}
 In section \ref{weaktostrong} we will show how to ``upgrade'' any weak update structure to an update structure.
 
-Given the semantic modeller's choice of SMC, we take the objects of that SMC to be conceptual spaces. For instance, in the SMC of convex spaces and convexity preserving maps between them, there is an object corresponding to RGB colour-space, the states of which are particular colours. Conceptual spaces admit concepts as subregions, as `redness' would be defined as a subregion of RGB colour space. Generally, such concepts may be complex subregions of conceptual spaces which do not have an analogue object in the original SMC. Moreover, concepts like `monkeyness' might be modelled in terms of other, hierarchical concepts, such as `emotion' and `banananess', where the latter is modelled in terms of primitive conceptual spaces such as `colour' and `taste'.\\
+Given the semantic modeller's choice of SMC, we take the objects of that SMC to be conceptual spaces. For instance, in the SMC of convex spaces and convexity preserving maps between them, there is an object corresponding to RGB colour-space, the states of which are particular colours. Conceptual spaces admit concepts as subregions, as `redness' would be defined as a subregion of RGB colour space. Generally, such concepts may be complex subregions of conceptual spaces which do not have an analogue object in the original SMC. Moreover, concepts like `monkeyness' might be modelled in terms of other, hierarchical concepts, such as `emotion' and `banananess', where the latter is modelled in terms of primitive conceptual spaces such as `colour' and `taste'.
 
 We may define concepts from conceptual spaces through update structures, by way of what we call `semantic correlators'. Considering concepts as semantic correlators along with update structures provides the necessary conceptual tools to construct complex hierarchical concepts such as `monkeyness' from other concepts.
 
@@ -260,9 +297,9 @@ and a magma homomorphism for the magma induced by those on each $A_i$
 \end{equation}
 \end{defn}
 
-One should think of the correlator as containing additional information about how certain properties influence each other. As such, correlators are very much dependent on the new concept one wishes to create from the underlying ones; the correlator for a banana is clearly very different from that of a fire engine, for instance.\\
+One should think of the correlator as containing additional information about how certain properties influence each other. As such, correlators are very much dependent on the new concept one wishes to create from the underlying ones; the correlator for a banana is clearly very different from that of a fire engine, for instance.
 
-The idempotence of a correlator captures the notion that properties correlated in a particular fashion are invariant under correlating them the same way again. Demanding that a correlator be a comagma and magma homomorphism captures the notion that copying (mixing) then correlating ought to be the same as correlating then copying (mixing).\\
+The idempotence of a correlator captures the notion that properties correlated in a particular fashion are invariant under correlating them the same way again. Demanding that a correlator be a comagma and magma homomorphism captures the notion that copying (mixing) then correlating ought to be the same as correlating then copying (mixing).
 
 For simplicity we will now work with correlators on only two properties, but the following techniques can easily be extended to more complicated cases. Suppose we have two properties, $c$ and $t$ with corresponding update structures $(\putt{c}, \get{c}, \mix{c}, \copyy{c})$ and $(\putt{t}, \get{t}, \mix{t}, \copyy{t})$ on a system $S$ and suppose that the structures commute, that is $\putt{t}\circ\putt{c}=\putt{c}\circ\putt{t}$ and $\get{t}\circ\get{c} = \get{c}\circ\get{t}$ where the composition is on the conceptual space $S$ and equality holds up to a braid on the properties\footnote{This notion of the \emph{independence} of the properties $c$ and $t$ reflects G\"{a}rdenfors' notion of independent domains, and is not unreasonable to require from a modelling perspective.}. Then one can construct a new correlated Put $\putt{ct}$ and correlated Get $\get{ct}$ by taking
 \begin{equation}\label{correlatedupdate}
@@ -381,13 +418,13 @@ The statement and proof of proposition \ref{reptoget} makes no explicit referenc
 
 \section{Conclusion}
 
-We have demonstrated a proof-of-concept for the categorical representation of concepts as restricted and correlated regions of G\"{a}rdenfors' conceptual spaces, which, to our knowledge, is the first semantic-engineering contribution of this kind.\\
+We have demonstrated a proof-of-concept for the categorical representation of concepts as restricted and correlated regions of G\"{a}rdenfors' conceptual spaces, which, to our knowledge, is the first semantic-engineering contribution of this kind.
 
-The core element of our construction is an interacting magma module and comagma comodule, internal to a symmetric monoidal category, reflecting `update' and `examine' properties. Though we borrowed terminology from lenses, our approach is distinct on two counts. Firstly, we define our constructs in arbitrary symmetric monoidal categories, whereas lenses typically assume cartesian categories. Secondly, the notion of interacting (co)magma modules is conceptually minimal, there being no analogue in the field of profunctor optics at large to the update structures we have defined, to the best of our knowledge. The benefit of this conceptual minimalism is that the requirements for update structures to exist are readily met by most approaches to categorical linguistic models. In this work, we have only considered \textbf{Set}-based semantic models, but there is no obstacle in principle to application to applying the same approach in true convex geometric domains and vector spaces.\\
+The core element of our construction is an interacting magma module and comagma comodule, internal to a symmetric monoidal category, reflecting `update' and `examine' properties. Though we borrowed terminology from lenses, our approach is distinct on two counts. Firstly, we define our constructs in arbitrary symmetric monoidal categories, whereas lenses typically assume cartesian categories. Secondly, the notion of interacting (co)magma modules is conceptually minimal, there being no analogue in the field of profunctor optics at large to the update structures we have defined, to the best of our knowledge. The benefit of this conceptual minimalism is that the requirements for update structures to exist are readily met by most approaches to categorical linguistic models. In this work, we have only considered \textbf{Set}-based semantic models, but there is no obstacle in principle to application to applying the same approach in true convex geometric domains and vector spaces.
 
-It remains for future work to demonstrate practical applications, say, in terms of inference in vector-based models of linguistic meaning, where we expect our update formalism will permit dynamic epistemic modelling as is encountered in the reading of a long text \cite{coecke_mathematics_2019}, where the properties of various actors change over time. It is also pressing work to integrate our approach with extant research on density-matrix based models of compositional cognition \cite{al-mehairi_compositional_2016}.\\
+It remains for future work to demonstrate practical applications, say, in terms of inference in vector-based models of linguistic meaning, where we expect our update formalism will permit dynamic epistemic modelling as is encountered in the reading of a long text \cite{coecke_mathematics_2019}, where the properties of various actors change over time. It is also pressing work to integrate our approach with extant research on density-matrix based models of compositional cognition \cite{al-mehairi_compositional_2016}.
 
-A further added benefit of such a conceptually minimal and axiomatic approach is that new domains of semantic models are now amenable for use, for instance, those obtained by RDF triples: no matter the underlying representations, once one has verified that a candidate update structure satisfies the axioms, one can be confident that the structure suitably models updating and viewing properties.\\
+A further added benefit of such a conceptually minimal and axiomatic approach is that new domains of semantic models are now amenable for use, for instance, those obtained by RDF triples: no matter the underlying representations, once one has verified that a candidate update structure satisfies the axioms, one can be confident that the structure suitably models updating and viewing properties.
 
 We are surprised by the power and fruitfulness of adopting graphical axiomatics that reflect cognitive modelling intentions, and we believe that further progress can be made in semantic-engineering following this general method. The authors have explored various other axiomatisations of update structures, each capturing different operational intuitions, and yielding qualitatively different systems: it remains for future work to tame the zoo of update structures obtained in this way.
 
