--- a/2006.06872/ReviewDraft.tex
+++ b/2006.06872/ReviewDraft.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,oneside,letterpaper]{article}
+\documentclass[12pt,oneside]{article}
 \pdfoutput=1
 \usepackage[section]{placeins}
 \usepackage{amssymb}
@@ -32,7 +32,42 @@
 \usepackage{subcaption}
 
 \newcommand{\tbar}{\widetilde{T}}
-\usepackage[colorlinks=true,citecolor=darkgreen,linkcolor=black,urlcolor=purple]{hyperref}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 %\documentclass[11pt,english]{article}
 %\usepackage{verbatim,bigints, mathtools, jheppub, hyperref}
@@ -119,11 +154,6 @@
 
 \interfootnotelinepenalty=10000
 
-
-\addtolength{\oddsidemargin}{-0.500in}
-\addtolength{\textwidth}{1.1in}
-\addtolength{\topmargin}{-0.600in}
-\addtolength{\textheight}{0.900in}
 
 \allowdisplaybreaks  % allow page breaks in displayed eqs
 
