--- a/hep-th-9601064/out.tex
+++ b/hep-th-9601064/out.tex
@@ -1,10 +1,42 @@
  
-\documentstyle[11pt,psfig]{article}
-\textwidth=16cm
-\oddsidemargin=0cm
-\evensidemargin=0cm
-\textheight=22cm
-\topmargin=0cm
+\documentclass[12pt]{article}
+\usepackage{graphicx} 
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -478,7 +510,8 @@ relations for the ordinary wave equation and for quasiparticle
 excitations of superfluid helium-4.
 \begin{figure}[tb]
 \centerline{
-\psfig{figure=helium.eps,angle=-90,height=4cm}}
+\includegraphics[height=6cm]{helium-copy.pdf}
+}
 \caption{Sketch of dispersion relations $\omega'(k)$ for the wave equation,
 the Unruh model, and Helium-II at zero temperature and pressure. 
 $\omega'$ is the frequency in the free-fall frame (\ref{otrans}).}
@@ -560,7 +593,8 @@ the positive wavevector part, backward in time, using the dispersion
 relation of liquid helium.  The idea is sketched in Fig. \ref{dance}.
 \begin{figure}[tb]
 \centerline{
-\psfig{figure=dance.eps,angle=-90,height=4cm}}
+\includegraphics[height=6cm, keepaspectratio]{dance-copy.pdf} 
+}
 \caption{Sketch of the history of an outgoing wavepacket
 propagated with the dispersion relation for Helium-II in (Fig. \ref{disps}).}
 \label{dance}
