--- a/2006.06872/CentralDogma.tex
+++ b/2006.06872/CentralDogma.tex
@@ -12,17 +12,13 @@ In fact, this has been such an important idea in the development of the subject 
  
 {\center \begin{framed}   As seen from the outside, a black hole can be described in terms of a quantum system with  $  {\rm Area}/(4G_N ) $  degrees of freedom,   which evolves unitarily under time evolution. 
 \end{framed}}
-  
-
 \begin{figure}[h]
 \begin{center}
 \includegraphics[scale=.3]{figures/BHQuantumBdy.png}
-\caption*{Using this hypothesis, the black hole and the whole spacetime around it, up to some surface denoted by the dotted circle, can be replaced by a quantum system. This quantum system interacts with the outside via a unitary Hamiltonian. }
 \label{BHQuantumBdy}
 \end{center}
 \end{figure}
-
- 
+Using this hypothesis, the black hole and the whole spacetime around it, up to some surface denoted by the dotted circle, can be replaced by a quantum system. This quantum system interacts with the outside via a unitary Hamiltonian. 
 
 Let us make some remarks about this. 
 \begin{itemize}
