--- a/1307.2892/RevisedSubmitted.tex
+++ b/1307.2892/RevisedSubmitted.tex
@@ -6,16 +6,7 @@
 \usepackage{cite}
   \usepackage{graphicx}
   \usepackage{color}
-  \setlength{\topmargin}{-.3in} \setlength{\oddsidemargin}{.0in}
-  %\setlength{\evensidemargin}{-.21in}
-  \setlength{\textheight}{8.5in} \setlength{\textwidth}{6.35in}
-  \setlength{\footnotesep}{\baselinestretch\baselineskip}
-  \newlength{\abstractwidth}
-  \setlength{\abstractwidth}{\textwidth}
-  \addtolength{\abstractwidth}{-6pc}
-  \newcommand{\OL}[1]{ \hspace{1pt}\overline{\hspace{-1pt}#1
-     \hspace{-1pt}}\hspace{1pt} }
-
+  
 \newcommand{\onefigure}[2]{\begin{figure}[htb]
 \begin{center}\leavevmode\epsfbox{#1.eps}\end{center}
 \caption{#2\label{#1}}
@@ -244,6 +235,7 @@ We perform some simple checks of this proposal.
 
   \sc
 
+\newpage
 
 \section{ Holographic entanglement entropy  }
 
@@ -265,24 +257,6 @@ If the boundary theory is a large $N$ gauge theory, then  \nref{TRent} is
 \nref{TRent} comes from classical physics in the bulk. Here we consider the quantum corrections
 to this formula. Namely, corrections that come from quantum mechanical effects in the bulk.
 These are of order $G_N^0$  (or $N^0$).
-
- \begin{figure}[h!]
-\begin{center}
-\vspace{5mm}
-\includegraphics[scale=1]{rt.png}
-%\includegraphics[scale=1]{RTBasic.pdf}
-\vspace{5mm}
-\caption{
-The red segment indicates a spatial region, $A$,  of the boundary
-theory. The leading contribution to the entanglement entropy is computed by the area of a minimal surface that ends at the boundary of
-region $A$. This surface divides the bulk into two, region $A_b$ and its complement. Region
-$A_b$ lives in the bulk and has one more dimension than region $A$. The leading correction
-to the boundary entanglement entropy
-is given by the bulk entanglement entropy between region $A_b$ and the rest of the bulk.
-  }
-\label{RTBasic}
-\end{center}
-\end{figure}
 
 We find  that the quantum corrections are essentially given by the bulk entanglement
 entropy. More precisely, the minimal surface that appears in \nref{TRent} divides the bulk into
@@ -317,6 +291,25 @@ degrees of precision.
 
 We first present a sketch of an argument for this formula. We then consider various simple
 checks.
+
+ \begin{figure}[t]
+\begin{center}
+\vspace{5mm}
+\includegraphics[scale=1]{rt.png}
+%\includegraphics[scale=1]{RTBasic.pdf}
+\vspace{5mm}
+\caption{
+The red segment indicates a spatial region, $A$,  of the boundary
+theory. The leading contribution to the entanglement entropy is computed by the area of a minimal surface that ends at the boundary of
+region $A$. This surface divides the bulk into two, region $A_b$ and its complement. Region
+$A_b$ lives in the bulk and has one more dimension than region $A$. The leading correction
+to the boundary entanglement entropy
+is given by the bulk entanglement entropy between region $A_b$ and the rest of the bulk.
+  }
+\label{RTBasic}
+\end{center}
+\end{figure}
+
 
 
 
