--- a/1411.7041/adsecv3.tex
+++ b/1411.7041/adsecv3.tex
@@ -1,5 +1,5 @@
 %
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \pdfoutput=1
 \usepackage{jheppub}
 %\usepackage{showlabels}
@@ -13,37 +13,17 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[normalem]{ulem}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-%\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
+
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
-\usepackage[small]{titlesec}
 
-% different \sum and also fixes underbraces
+% these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
-
-% optional
-
-%\input{../helpers/revtex-12-fix.tex}
-%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
-%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+\input{../helpers/fix-underbrace.tex}
 
 \newcommand{\D}{\mathcal{D}}
 \newcommand{\be}{\begin{equation}}
@@ -99,6 +79,8 @@ bookmarksopenlevel=10
 %Indeed Bogoliubov transformations between different AdS-Rindler reconstructions map to different constructions of the same bulk operator that correct for the erasure of different CFT spatial regions, the radial location of an operator maps to the size of boundary erasures that can be corrected without losing information about the operator, and the holographic entropy bound maps to the statement that increasing the size of the subspace protected by a quantum error correcting code decreases the size of the erasures it can correct.  
 We also show that the question of whether bulk operator reconstruction works only in the causal wedge or all the way to the extremal surface is related to the question of whether or not the quantum error correcting code realized by AdS/CFT is also a ``quantum secret sharing scheme'', and suggest a tensor network calculation that may settle the issue.  Interestingly, the version of quantum error correction which is best suited to our analysis is the somewhat nonstandard ``operator algebra quantum error correction'' of Beny, Kempf, and Kribs. Our proposal gives a precise formulation of the idea of ``subregion-subregion'' duality in AdS/CFT, and clarifies the limits of its validity.}
 \maketitle
+
+\newpage
 \section{Introduction}
 Almost twenty years after its initial formulation, the AdS/CFT correspondence remains our best-understood example of a precise theory of quantum gravity.  It has shed light on many deep puzzles in quantum gravity, and has also been of practical use in studying the dynamics of strongly interacting quantum field theories.  One aspect that remains mysterious, however, is the emergence of approximate bulk locality.  Locality near the boundary is straightforward. In the ``extrapolate'' version of the AdS/CFT dictionary we have a simple relation \cite{Banks:1998dd,Harlow:2011ke}
 \be\label{extd}
@@ -531,14 +513,14 @@ where $f_{\omega \lambda}(\rho,\tau,\alpha)$ is a solution of the Klein-Gordon e
 f_{\omega \lambda}(\rho,\tau,\alpha)=e^{-i\omega \tau} Y_\lambda(\alpha) \psi_{\omega\lambda}(\rho).
 \ee
 Here $Y_\lambda(\alpha)$ is an eigenfunction of the Laplacian on $H_{d-1}$ with eigenvalue $-\lambda$; the set of $\lambda$'s is continuous (and positive) so ``$\sum_\lambda$'' should really be understood as shorthand for an integral together with a sum over degeneracies.  $\psi_{\omega \lambda}$ is explicitly given by
-\begin{align}\nonumber
-\psi_{\omega,\lambda}(\rho)=\mathcal{N}_{\omega\lambda}\rho^{-\Delta}\left(1-\frac{1}{\rho^2}\right)^{-\frac{i\omega}{2}}F\Bigg(&-\frac{(d-2)}{4}+\frac{\Delta}{2}-\frac{i\omega}{2}+\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\lambda},\\
-&-\frac{(d-2)}{4}+\frac{\Delta}{2}-\frac{i\omega}{2}-\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\lambda},\Delta-\frac{d-2}{2},\frac{1}{\rho^2}\Bigg),
-\end{align}
+\begin{multline}
+\psi_{\omega,\lambda}(\rho)=\mathcal{N}_{\omega\lambda}\rho^{-\Delta}\left(1-\frac{1}{\rho^2}\right)^{-\frac{i\omega}{2}}F\Bigg(-\frac{(d-2)}{4}+\frac{\Delta}{2}-\frac{i\omega}{2}+\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\lambda},\\
+-\frac{(d-2)}{4}+\frac{\Delta}{2}-\frac{i\omega}{2}-\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\lambda},\Delta-\frac{d-2}{2},\frac{1}{\rho^2}\Bigg),
+\end{multline}
 with 
-\be
-\mathcal{N}_{\omega \lambda}=\frac{1}{\sqrt{2|\omega|}}\frac{\Gamma\left(-\frac{(d-2)}{4}+\frac{\Delta}{2}+\frac{i\omega}{2r_s}+\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\frac{\lambda}{r_s^2}}\right)\Gamma\left(-\frac{(d-2)}{4}+\frac{\Delta}{2}+\frac{i\omega}{2r_s}-\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\frac{\lambda}{r_s^2}}\right)}{\Gamma\left(\Delta-\frac{d-2}{2}\right)\Gamma\left(\frac{i\omega}{r_s}\right)}
-\ee
+\begin{multline}
+\mathcal{N}_{\omega \lambda}= \\ \frac{1}{\sqrt{2|\omega|}}\frac{\Gamma\left(-\frac{(d-2)}{4}+\frac{\Delta}{2}+\frac{i\omega}{2r_s}+\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\frac{\lambda}{r_s^2}}\right)\Gamma\left(-\frac{(d-2)}{4}+\frac{\Delta}{2}+\frac{i\omega}{2r_s}-\frac{1}{2}\sqrt{\frac{(d-2)^2}{4}-\frac{\lambda}{r_s^2}}\right)}{\Gamma\left(\Delta-\frac{d-2}{2}\right)\Gamma\left(\frac{i\omega}{r_s}\right)}
+\end{multline}
 and
 \be
 \Delta=\frac{d}{2}+\frac{1}{2}\sqrt{d^2+4m^2}.
