--- a/1211.3494/surfaces7.tex
+++ b/1211.3494/surfaces7.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 
 \usepackage{graphicx}
 \usepackage{bm}
@@ -12,13 +12,43 @@
 \\ \textit{Santa Barbara, CA 93106, USA} }
 \title{Maximin Surfaces, and the Strong Subadditivity of the Covariant Holographic Entanglement Entropy}
 
-\date{\today}
+\date{6 Dec 2016}
 
-\textheight = 22truecm
-\textwidth = 15.5truecm
-\voffset = -1truecm
-\hoffset = -2truecm
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \begin{document}
 
 \maketitle
@@ -31,7 +61,11 @@ PACS numbers: 11.25.Tq, 04.20.-q, 03.67.Mn, 04.70.Dy
 
 \vspace{-.5cm}
 
+\newpage
+
 \tableofcontents
+
+\newpage
 
 \section{Introduction}\label{intro}
 
