--- a/1908.10996/Draft.tex
+++ b/1908.10996/Draft.tex
@@ -5,7 +5,7 @@
 \usepackage{amssymb}
 \usepackage{caption}
     \captionsetup[figure]{name={Figure}}
-    \captionsetup{font={sf}}
+    \captionsetup{font={rm},size={small}}
 \usepackage{cite}
 \usepackage{color}
     \definecolor{darkgreen}{rgb}{0,0.5,0}
@@ -30,8 +30,7 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
+\linespread{1.05}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
@@ -99,11 +98,12 @@ Inspired by this, we propose a new rule for computing the entropy of quantum sys
 {\it Dedicated to the memory of Steven S. Gubser}
 \end{center}
 
-\pagebreak
+\newpage
 
 \setcounter{tocdepth}{3}
-{\hypersetup{linkcolor=black}\tableofcontents}
+{\tableofcontents}
 
+\newpage
 \section{Introduction} 
 
 The central question of the information paradox \cite{Hawking:1974sw, Hawking:1976ra} is whether the process of formation and evaporation of a black hole can be described in a unitary fashion.
